@@ -1,5 +1,10 @@
 2009-10-15  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
+	* aprx.h, aprx.c, interface.c, config.c, rfbeacon.c, aprsis.c,
+	  ttyreader.c, netbeacon.c:
+	    Config machinery redone towards new style.  Rx-IGate
+	    works again.
+
 	* aprx.h, pbuf.c, pbuf.h, interface.c, digipeater.c, aprx.c:
 	    Skeletons for pbufs, digipeaters, and their uses in
 	    the interface layer.
